# i-hate-this

./: Cargo.toml
src/: main.rs
src/character/: components.rs  mod.rs  plugins.rs  resources.rs
src/character/systems/: ai.rs  mod.rs  movement.rs  stats.rs
src/combat/: components.rs  mod.rs  plugins.rs  resources.rs
src/combat/systems/: attack.rs  damage.rs  defence.rs  defense.rs  hit_detection.rs  mod.rs
src/ui/: components.rs  mod.rs  plugins.rs  resources.rs
src/ui/systems/: hud.rs  mod.rs
src/weapons/: components.rs  mod.rs  plugins.rs  resources.rs
src/weapons/systems/: mod.rs  weapon_behavior.rs  weapon_behaviour.rs
